# workcomp-rates

./: .env.example  .gitignore  DASHBOARD_DATA_DICTIONARY.md  DATABASE_FIELD_MAPPING.md  DATABASE_RELATIONSHIPS.txt  DATASET_REVIEW_FIX_GUIDE.md  DATASET_REVIEW_SETUP_GUIDE.md  DEPLOYMENT.md  INSIGHTS_SYSTEM_FIXES.md  NAVIGATION_ISSUE_FIX.md  PARQUET_DATA_SPECIFICATION.md  README.md  S3_TROUBLESHOOTING_GUIDE.md  USER_ACTIVITY_TRACKING.md  cleanup_benchmarks_db.py  debug_insights_navigation.py  deploy.sh  generate_medicare_rates.py  gunicorn.conf.py  manage.py  prodpush.sh  pull_prod_db.ps1  pull_prod_db.sh  pyproject.toml  setup-server.sh  simple_navigation_test.py  test_fixes_simple.py  test_insights_fixes.py  test_insights_stress.py  test_medicare_state_avg.py  test_parquet.py
accounts/: urls.py  views.py
core/: admin.py  apps.py  cache.py  context_processors.py  middleware.py  models.py  signals.py  tests.py  urls.py  views.py
db_backups/: db.sqlite3.local.20250828_222235  db.sqlite3.local.20250828_224632  db.sqlite3.local.20250828_225255  db.sqlite3.local.20250829_142939  db.sqlite3.local.20250830_154616  db.sqlite3.local.20250901_202638  db.sqlite3.local.20250902_100518  db.sqlite3.local.20250902_142050  db.sqlite3.local.20250902_151318  db.sqlite3.local.20250904_124505  db.sqlite3.local.20250908_173253  db.sqlite3.local.20250922_134835  db.sqlite3.local.20250925_155727  db.sqlite3.local.20250926_110939
info/: 20250923-action-plan.md  fact_cols_pull.txt  fact_enriched_cols.txt  tile_analytics.md
notebooks/: edit_GA.ipynb  orgs  taxonomy_blacklist.txt
(+69 files in other folders)
