[project]
name = "workcomp-rates"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.5",
    "djangorestframework>=3.16.1",
    "duckdb>=1.3.2",
    "gunicorn>=23.0.0",
    "numpy>=1.24.0",
    "pandas>=2.3.2",
    "pyarrow>=21.0.0",
    "python-dotenv>=1.1.1",
    "whitenoise>=6.9.0",
]
